--- a/public/app.html
+++ b/public/app.html
@@ -1,65 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>File Upload</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    .hidden {
-      display: none;
-    }
-    .container {
-      text-align: center;
-    }
-    .button {
-      display: inline-block;
-      padding: 10px 15px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin: 10px;
-    }
-    .button:hover {
-      background-color: #0056b3;
-    }
-    .file-link {
-      margin: 20px;
-      display: block;
-    }
-  </style>
-</head>
-<body>
-  <h1>My Employee System</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Employee System</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        padding: 20px;
+      }
+      h1 {
+        margin-bottom: 20px;
+      }
+      form {
+        margin-bottom: 20px;
+      }
+      #root div {
+        display: inline-block;
+        border: 1px solid #ddd;
+        padding: 20px;
+        margin: 10px;
+      }
+      .hidden {
+        display: none;
+      }
+      .employee-card {
+        cursor: pointer;
+        border: 1px solid #ddd;
+        padding: 20px;
+        margin: 10px;
+        position: relative;
+      }
+      .employee-card.selected {
+        border: 2px solid blue;
+        background-color: #f0f8ff;
+      }
+      .employee-image {
+        display: none;
+        max-width: 100px;
+        margin-top: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>My Employee System</h1>
     <div>
-      <form onsubmit="formsubmit(event)">
-        <input placeholder="name" name="name" />
-        <input placeholder="status" name="status" />
-        <input type="submit" value="Add Emploayee" />
+      <form id="employee-form">
+        <input placeholder="Name" name="name" required />
+        <input placeholder="Status" name="status" required />
+        <input type="submit" value="Add Employee" />
       </form>
     </div>
-    <div id="root"></div>
-  <div class="container">
-    <div id="input-fields">
-      <label for="file-upload" class="button">Choose File</label>
-      <input type="file" id="file-upload" class="hidden" />
-      <button id="upload-button" class="button">Upload File</button>
+    <div>
+      <div id="root"></div>
+      <h2>Upload File for Employee</h2>
+      <input type="file" id="file-upload" />
+      <button id="upload-button">Upload File</button>
+      <div id="imageContainer">
+        <!-- Image will be hidden here until uploaded -->
+        <img id="uploadedImage" />
+      </div>
     </div>
-    <div id="file-data" class="hidden">
-      <a href="#" id="file-link" class="file-link" target="_blank"></a>
-    </div>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="app.js"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="app.js"></script>
+  </body>
 </html>
